openshift-local/base/routes/smartaeronautics/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: smartaeronautics
  name: smartaeronautics
spec:
  host: smartaeronautics.apps-crc.testing
  to:
    kind: Service
    name: smartaeronautics
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
